--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
         <title>{{ title }}</title>
     </head>
     <body>
-        <h1>Привет, {{ username }}!</h1>
+        <div class="mainhead">
+            <div class="hello">
+            {% if username != 0 %}
+                <h1>Здравствуй, {{ username }}!</h1>
+                <p>Рады снова видеть Вас на нашем сайте</p>
+            {% else %}
+                <h1>Добро пожаловать!</h1>
+                <p>Зарегистрируйтесь или войдите в свой аккаунт, чтобы открыть полный функционал сайта</p>
+            {% endif %}
+            </div>
+            <div class="profile">
+            {% if username != 0 %}
+                <img src="{{ url_for('static', filename=avatar) }}">
+                <div class="profile_info">
+                    <h3> {{ username }} </h3>
+                    <p> Ваш статус - {{ status }}</p>
+                <div>
+            {% else %}
+                <div class="not_logged">
+                    <h1>Войдите в свой аккаунт</h1>
+                    <button>Войти</button>
+                </div>
+            {% endif %}
+            </div>
+        </div>
     </body>
 </html>
